# cloudflare-mail-manager

./: Cargo.toml  README.md
src/: cloudflare_api.rs  command.rs  config.rs  main.rs
